<resources>
    <string name="app_name">Spotify de buget</string>
    <!-- Strings used for fragments for navigation -->
    <string name="song_list_fragment_label">Songs List</string>
    <string name="song_edit_fragment_label">Song Edit</string>
    <string name="edit">Edit song</string>
    <string name="save">Save song</string>

    <!-- hints for edit texts-->
    <string name="hint_song_title">Song title</string>
    <string name="hint_nr_streams">Nr. of streams</string>
    <string name="hint_date">Release date</string>
    <string name="hint_hasAwards">hasAwards</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <string name="login_string">log in</string>
    <string name="logout_string">log out</string>
    <string name="delete">delete</string>
    <string name="invalid_username">Username is not valid!</string>
    <string name="invalid_password">Password cannot be empty!</string>
    <string name="release_date">release date:</string>
    <string name="search">search</string>
    <string name="no_awards">no awards</string>
    <string name="active_network">online</string>
    <string name="inactive_network">offline</string>
    <string name="take_picture">take picture</string>
    <string name="google_maps_api_key">AIzaSyAWVrNoe-OApwgBYNFJ9DhYGjQb06AyxdE</string>
    <string name="set_location">set location</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="locate">locate</string>
</resources>